--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -5,8 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailSettings": {
+    "Port": 587,
+    "SmtpServer": "smtp.gmail.com",
+    "Email": "uosefahmed0022@gmail.com",
+    "DisplayedName": "BSU360",
+    "Password": "mhtl jbqz mwud esph"
+  },
+  "JWT": {
+    "Key": "strONGKAutHENTICATIONKEygydasjdsajjkfdsahjhdfjdas",
+    "ValidIssuer": "https://localhost:7004/",
+    "ValidAudience": "MySecureUsers",
+    "DurationInDays": "10"
+  },
   "ConnectionStrings": {
     "IdentityConnections": "Server = (localdb)\\ProjectModels ; DataBase = AuthIdentity; Integrated Security = True; TrustServerCertificate=True"
   },
+
   "AllowedHosts": "*"
 }
