--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "IdentityConnections": "Server = (localdb)\\ProjectModels ; DataBase = AuthIdentity; Integrated Security = True; TrustServerCertificate=True",
+    "IdentityConnections": "Server = (localdb)\\ProjectModels ; DataBase = BSUBusinessDBContextIdentity; Integrated Security = True; TrustServerCertificate=True",
     "BusinessConnections": "Server = (localdb)\\ProjectModels ; DataBase = BSUBusinessDBContext; Integrated Security = True; TrustServerCertificate=True"
 
   },
